adding Ai anylzer ollama and dark mode